--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "@react-google-maps/api": "^2.20.7",
     "axios": "^1.10.0",
     "framer-motion": "^12.23.3",
+    "leaflet": "^1.9.4",
+    "prop-types": "^15.8.1",
     "react": "^19.1.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.3",
+    "recharts": "^3.1.0",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
