--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.10.0",
     "framer-motion": "^12.23.3",
     "leaflet": "^1.9.4",
+    "leaflet-geosearch": "^4.2.0",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-csv": "^2.2.2",
